# nlp-fundamentals

./: pyproject.toml
nlp_fundamentals/nlp-computational-linguistics/: 04-intro-gensim.ipynb  04-intro-gensim.md
nlp_fundamentals/nlp-with-PyTorch/: 01-intro.ipynb  02-quick-tour-traditional-NLP.ipynb  03-foundational-neural-networks.ipynb  04-feed-forward-networks.ipynb  05-2-continuous-bag-of-words-CBOW.ipynb  05-embedding-words-types.ipynb
nlp_fundamentals/nlp-with-transformers/: 00-preface.md  01-intro.md  01_introduction.ipynb  02-classification.ipynb  02_classification.ipynb
