[tool.poetry]
name = "nlp-fundamentals"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_fundamentals"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
