[tool.poetry]
name = "nlp-fundamentals"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_fundamentals"}]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.2"
gensim = "^4.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
