[tool.poetry]
name = "nlp-fundamentals"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
packages = [{include = "nlp_fundamentals"}]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.2"
gensim = "^4.3.1"
nltk = "^3.8.1"
scikit-multilearn = "^0.2.0"
transformers = {extras = ["sentencepiece"], version = "^4.29.2"}
datasets = "^2.12.0"
matplotlib = "^3.7.1"
torch = "2.0.0"
xformers = "^0.0.19"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
